--- a/static/css/book_list2.css
+++ b/static/css/book_list2.css
@@ -1,14 +1,11 @@
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.wrapper{
+    display:flex;
+    justify-content:center;
 }
+
 #up_category_menu{
     height: 3.125rem;
-    position: absolute;
     width: 46.88rem;
-    left: 585px;
-    top: 150px;
     border: 0.125rem solid #E0E0E0;
     transform: rotate(-0.07deg);
     border-radius: nullpx;
@@ -22,20 +19,19 @@
     color: #757575;
 }
 #line_major_bar{
-    position: absolute;
     width: 46.88rem;
     height: 0rem;
-    left: 585px;
-    top: 190px;
     border: 0.125rem solid #E0E0E0;
     transform: rotate(-0.07deg);
 }
+#search_form{
+    display:flex;
+    justify-content:center;
+    margin-bottom: 1rem;
+}
 .search_input{
-    position: absolute;
     width: 70.88rem;
     height: 3.438rem;
-    left: 362px;
-    top: 235px;
     border:  0.0625rem solid #8B8B8B;
     box-sizing: border-box;
     border-radius: 6.25rem;
@@ -44,29 +40,22 @@
     font-weight: normal;
     font-size: 1.25rem;
     line-height: 0rem;
-    display: flex;
-    align-items: center;
     color: #7B7B7B;
 }
 form input{
     padding-left:1.25rem;
 }
 .btn_search{
-      position: absolute;
       width: 2.625rem;
       height:  2.75rem;
-      left: 1513px;
-      top: 250px;
       border: 0;
       outline:0;
       background-color: #FFFFFF;
+      display: inline;
 }
 #btn_create{
-    position: absolute;
     width: 12.69rem;
     height: 2.5rem;
-    left: 1380px;
-    top: 150px;
     border: 0;
     outline:0;
     background: #FF8300;
@@ -78,16 +67,57 @@ form input{
     line-height: 1.688rem;
     text-align: center;
     color: #FFFFFF;
+    margin-right: -10rem;
+    margin-left: 1rem;
 }
+
+
 .filtering-box{
-    position: absolute;
-    display: inline-block;
-    width: 100%;
+    width: 119rem;
     height: 3.75rem;
-    left: 0px;
-    top: 310px;
     border:0.0625rem solid #FF9F46;
     background: #FF9F46;
+    display:flex;
+    justify-content:center;
+    margin-bottom: 1rem;
+}
+
+.free_filter{
+    width: 200px;
+    height: 60px;
+}
+.deal_filter{
+    width: 12.5rem;
+    height: 3.75rem;
+}
+.filter-txt{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size:  1.875rem;
+    line-height:  1.813rem;
+    color: #FFFFFF;
+    margin-right: 8rem;
+}
+.free-label{
+    padding-left:3.75rem;
+    padding-top: 0.625rem;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.5rem;
+    line-height: 1.813rem;
+    color: #FFFFFF;
+}
+.deal-label{
+    padding-left:3.75rem;
+    padding-top: 0.625rem;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.5rem;
+    line-height: 1.813rem;
+    color: #FFFFFF;
 }
 
 input[type="checkbox"]+label{
@@ -102,57 +132,15 @@ input[type="checkbox"] {
     display: none;
 }
 
-.free_filter{
-    display: inline-block;
-    width: 200px;
-    height: 60px;
-}
-.deal_filter{
-    display: inline-block;
-    width: 12.5rem;
-    height: 3.75rem;
-}
-.filter-txt{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: bold;
-    font-size:  1.875rem;
-    line-height:  1.813rem;
-    color: #FFFFFF;
-    position: absolute;
-    left:20%;
-    top:13px;
-}
-.free-label{
-    position: absolute;
-    left:35%;
-    top:5px;
-    padding-left:3.75rem;
-    padding-top: 0.625rem;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 1.5rem;
-    line-height: 1.813rem;
-    color: #FFFFFF;
-}
-.deal-label{
-    position: absolute;
-    left:50%;
-    top:5px;
-    padding-left:3.75rem;
-    padding-top: 0.625rem;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 1.5rem;
-    line-height: 1.813rem;
-    color: #FFFFFF;
-}
+
+
 table{
-   position: absolute;
-   left: 290px;
-   top: 395px;
+
+/*
+    display: flex;
+    align-items: center;
+    justify-content: center;*/
+
 }
 th{
     text-align:center;
@@ -181,23 +169,23 @@ td{
     font-size: 1.125rem;
 }
 td:nth-child(1){
-    width: 13.13rem;
+    width: 26rem;
 }
 td:nth-child(2){
-    width:15.63rem;
+    width:35rem;
     text-align:left;
 }
 td:nth-child(3){
-    width:18.13rem;
+    width:30rem;
 }
 td:nth-child(4){
-    width:11.88rem;
+    width:23rem;
 }
 td:nth-child(5){
-    width:12.5rem;
+    width:24rem;
 }
 td:nth-child(6){
-    width: 12.5rem;
+    width: 24rem;
 }
 input:focus {
     outline: none;
@@ -218,10 +206,10 @@ input:focus {
 .list_state_content {
     display: none;
     position: absolute;
-    top: 0%;
-    left: 64%;
+    top: 40%;
+    left: 60%;
     padding: 0.3125rem;
-    width: 15.63rem;
+    width: 16rem;
     height: 6.938rem;
     border: 0rem solid black;
     box-shadow: 0rem 0rem 1.25rem 0.125rem rgba(0, 0, 0, 0.25);
@@ -244,15 +232,10 @@ button:focus {
     font-weight: 500;
     font-size: 2.25rem;
     line-height: 5rem;
-    /* or 222% */
-    text-align: center;
     color: #757575;
     height:  3.125rem;
-    position: absolute;
     width: 46.88rem;
-    left: 600px;
-    top: 500px;
-    text-align-last: center;
+    margin: 15rem 25rem;
 
 }
 .search_word{
@@ -265,3 +248,7 @@ button:focus {
     text-align: center;
     color: #757575;
 }
+
+
+
+
