--- a/templates/book/book_list.html
+++ b/templates/book/book_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/book_list.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/book_list2.css' %}">
 {% endblock %}
 {% block content %}
 <script type="text/javascript" >
@@ -43,28 +43,35 @@ function close_box(){
 </script>
 
 <div class="container">
-    <form action="{% url 'book:search' %}" method="post"> {% csrf_token %}
-        <input class="search_input" type="search" placeholder="     도서 검색 (수업, 책제목, 저자 등)" name="q" value="{{q}}">
-        <button type="submit" class="btn_search" > <img src="{% static 'img/search_btn.png' %}" alt="" height="45" width="43"> </button>
-    </form>
-    <button type="button" id="btn_create" onclick="location.href='{% url 'book:create' %}'" >전공책 등록하기</button>
-    <form method="post">
-    <select id="up_category_menu" name="up_category_menu" onchange="changeMajorSelect()">
-        <option value="all" selected> 전체 </option>
-        <option value="major1"  > {{user.first_major}} </option>
-        {% if user.second_major != "" %}
-            <option value="major2"> {{user.second_major}} </option>
-        {% endif %}
-        {% if user.third_major != "" %}
-            <option value="major3"> {{user.third_major}} </option>
-        {% endif %}
-    </select>
-    </form>
-    <hr id="line_major_bar">
+    <div class="wrapper">
+        <form method="post">
+            <select id="up_category_menu" name="up_category_menu" onchange="changeMajorSelect()">
+                <option value="all" selected> 전체 </option>
+                <option value="major1"  > {{user.first_major}} </option>
+                {% if user.second_major != "" %}
+                    <option value="major2"> {{user.second_major}} </option>
+                {% endif %}
+                {% if user.third_major != "" %}
+                    <option value="major3"> {{user.third_major}} </option>
+                {% endif %}
+            </select>
+            <hr id="line_major_bar">
+        </form>
+        <button type="button" id="btn_create" onclick="location.href='{% url 'book:create' %}'" >전공책 등록하기</button>
+    </div>
 
+    <div class="wrapper">
+        <form action="{% url 'book:search' %}" method="post" id="search_form"> {% csrf_token %}
+            <input class="search_input" type="search" placeholder="     도서 검색 (수업, 책제목, 저자 등)" name="q" value="{{q}}">
+            <button type="submit" class="btn_search" > <img src="{% static 'img/search_btn.png' %}" alt="" height="45" width="43"> </button>
+        </form>
+    </div>
+
+    <div class="wrapper filter">
     <form action="{% url 'book:index' %}" method="get" id="filter-form">
-        <div class="filtering-box"> <span class="filter-txt"> 필터링 </span>
-            <div class="filter-checkbox">
+        <div class="filtering-box">
+            <div class="all_filter_contents">
+            <span class="filter-txt"> 필터링 </span>
             {% if "free" in search_type %}
             <span class="free_filter">
                 <input class="form-check-input" type="checkbox" checked value="free" name="search-type" onchange="changeFilter()" id="free1">
@@ -89,10 +96,11 @@ function close_box(){
                 <label for="deal2" class="deal-label"> 거래중 </label>
             </span>
             {% endif %}
-        <button id="hidden-form-submit" type="submit" hidden>제출</button>
+            <button id="hidden-form-submit" type="submit" hidden>제출</button>
         </div>
         </div>
     </form>
+    </div>
 
     {% if object_list %}
         <table id="book_table">
@@ -149,41 +157,10 @@ function close_box(){
             </tbody>
         </table>
     {% else %}
-        <div class="no_search"> 작성된 글이 없습니다 </div>
+        <div class="no_search">
+            작성된 글이 없습니다
+        </div>
     {% endif %}
 </div>
-<!--
-    {% if is_paginated %}
-    <div class="wrap_pagination">
-<ul class="pagination">
-    {% if page_obj.has_previous %}
-    <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.previous_page_number }}"
-            tabindex="-1"> < </a>
-    </li>
-    {% else %}
-    <li class="page-item disabled">
-        <a class="page-link" href="#" tabindex="-1"> < </a>
-    </li>
-    {% endif %}
 
-    {% for page in page_range %}
-    <li class="page-item {% if page == page_obj.number %} activate {% endif %}">
-        <a class="page-link" href="?page={{ page }}">{{ page }}</a>
-    </li>
-    {% endfor %}
-
-    {% if page_obj.has_next %}
-    <li class="page-item">
-        <a class="page-link"
-            href="?page={{ page_obj.next_page_number }}"> > </a>
-    </li>
-    {% else %}
-    <li class="page-item disabled">
-        <a class="page-link" href="#"> > </a>
-    </li>
-    {% endif %}
-</ul>
-    </div> -->
-{% endif %}
 {% endblock %}
