--- a/templates/book/book_major1_list.html
+++ b/templates/book/book_major1_list.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/book_list.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/book_list2.css' %}">
 {% endblock %}
 {% block content %}
-
 <script type="text/javascript" >
 function changeMajorSelect(){
     var selectBox = document.getElementById("up_category_menu");
@@ -15,7 +14,6 @@ function changeMajorSelect(){
     var major1 = "major1"
     var major2 = "major2"
     var major3 = "major3"
-
     if (selectValue == all){
         var url = '{% url 'book:index' %}';
         window.location.href = url;
@@ -38,7 +36,6 @@ function show_box(){
     document.getElementById('state_detail2').style.display='block';
     document.getElementById('fade').style.display='block';
 }
-
 function close_box(){
     document.getElementById('state_detail2').style.display='none';
     document.getElementById('fade').style.display='none';
@@ -46,26 +43,35 @@ function close_box(){
 </script>
 
 <div class="container">
-    <form action="{% url 'book:search' %}" method="post"> {% csrf_token %}
-        <input class="search_input" type="search" placeholder="     도서 검색 (수업, 책제목, 저자 등)" name="q" value="{{q}}">
-        <button type="submit" class="btn_search" > <img src="{% static 'img/search_btn.png' %}" alt="" height="45" width="43"> </button>
-    </form>
-    <button type="button" id="btn_create" onclick="location.href='{% url 'book:create' %}'" >전공책 등록하기</button>
-    <form method="post">
-    <select id="up_category_menu" name="up_category_menu" onchange="changeMajorSelect()">
-        <option value="all" > 전체 </option>
-        <option value="major1" selected > {{user.first_major}} </option>
-        {% if user.second_major != "" %}
-            <option value="major2"> {{user.second_major}} </option>
-        {% endif %}
-        {% if user.third_major != "" %}
-            <option value="major3"> {{user.third_major}} </option>
-        {% endif %}
-    </select>
-    </form>
-    <hr id="line_major_bar">
+    <div class="wrapper">
+        <form method="post">
+            <select id="up_category_menu" name="up_category_menu" onchange="changeMajorSelect()">
+                <option value="all" > 전체 </option>
+                <option value="major1" selected > {{user.first_major}} </option>
+                {% if user.second_major != "" %}
+                    <option value="major2"> {{user.second_major}} </option>
+                {% endif %}
+                {% if user.third_major != "" %}
+                    <option value="major3"> {{user.third_major}} </option>
+                {% endif %}
+            </select>
+            <hr id="line_major_bar">
+        </form>
+        <button type="button" id="btn_create" onclick="location.href='{% url 'book:create' %}'" >전공책 등록하기</button>
+    </div>
+
+    <div class="wrapper">
+        <form action="{% url 'book:search' %}" method="post" id="search_form"> {% csrf_token %}
+            <input class="search_input" type="search" placeholder="     도서 검색 (수업, 책제목, 저자 등)" name="q" value="{{q}}">
+            <button type="submit" class="btn_search" > <img src="{% static 'img/search_btn.png' %}" alt="" height="45" width="43"> </button>
+        </form>
+    </div>
+
+    <div class="wrapper filter">
     <form action="{% url 'book:major1' %}" method="get" id="filter-form">
-        <div class="filtering-box"> <span class="filter-txt"> 필터링 </span>
+        <div class="filtering-box">
+            <div class="all_filter_contents">
+            <span class="filter-txt"> 필터링 </span>
             {% if "free" in search_type %}
             <span class="free_filter">
                 <input class="form-check-input" type="checkbox" checked value="free" name="search-type" onchange="changeFilter()" id="free1">
@@ -85,15 +91,16 @@ function close_box(){
             </span>
             {% endif %}
             {% if "deal" not in search_type %}
-             <span class="deal_filter">
+            <span class="deal_filter">
                 <input class="form-check-input" type="checkbox"  value="deal" name="search-type"  onchange="changeFilter()" id="deal2">
                 <label for="deal2" class="deal-label"> 거래중 </label>
             </span>
             {% endif %}
+            <button id="hidden-form-submit" type="submit" hidden>제출</button>
         </div>
-        <button id="hidden-form-submit" type="submit" hidden>제출</button>
+        </div>
     </form>
-
+    </div>
 
     {% if object_list %}
         <table id="book_table">
@@ -107,7 +114,7 @@ function close_box(){
                     <div class="state_box">
                       <div id="state_detail2" class="list_state_content">
                           <span style="font-weight: bold; font-size: 14px;"> BooKU 도서 상태 기준 안내</span><button class="btn_closed_state" onclick="close_box()"><img src="{% static 'img/state_standard.png' %}" alt="" height="19" width="19"></button>
-                          <div class="state_box_text2" align="left" style="padding-left: -10px;" >
+                          <div class="state_box_text2" align="left">
                               <span style="font-weight: bold;"> 최상:</span> 새것과 같은 상태 <br>
                               <span style="font-weight: bold;"> 상:</span> 약간의 필기감 <br>
                               <span style="font-weight: bold;"> 보통:</span> 헌 부분 있음, 필기감, 사용감 있음 <br>
@@ -116,9 +123,11 @@ function close_box(){
                       </div>
                     </div>
                 </th>
+
                 <th>가격</th>
                 <th>거래가능</th>
             </thead>
+
             <tbody>
                     {% for object in object_list %}
                         <tr class="tabel_row" onclick="location.href='{% url 'book:detail' object.id %}'">
@@ -146,43 +155,10 @@ function close_box(){
                         </tr>
                     {% endfor %}
             </tbody>
-            </table>
+        </table>
     {% else %}
         <div class="no_search"> 작성된 글이 없습니다 </div>
     {% endif %}
 </div>
-<!--
-    {% if is_paginated %}
-    <div class="wrap_pagination">
-<ul class="pagination">
-    {% if page_obj.has_previous %}
-    <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.previous_page_number }}"
-            tabindex="-1"> < </a>
-    </li>
-    {% else %}
-    <li class="page-item disabled">
-        <a class="page-link" href="#" tabindex="-1"> < </a>
-    </li>
-    {% endif %}
 
-    {% for page in page_range %}
-    <li class="page-item {% if page == page_obj.number %} activate {% endif %}">
-        <a class="page-link" href="?page={{ page }}">{{ page }}</a>
-    </li>
-    {% endfor %}
-
-    {% if page_obj.has_next %}
-    <li class="page-item">
-        <a class="page-link"
-            href="?page={{ page_obj.next_page_number }}"> > </a>
-    </li>
-    {% else %}
-    <li class="page-item disabled">
-        <a class="page-link" href="#"> > </a>
-    </li>
-    {% endif %}
-</ul>
-    </div> -->
-{% endif %}
 {% endblock %}
