--- a/templates/book/book_major3_list.html
+++ b/templates/book/book_major3_list.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/book_list.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/book_list2.css' %}">
 {% endblock %}
 {% block content %}
-
-<script type="text/javascript">
+<script type="text/javascript" >
 function changeMajorSelect(){
     var selectBox = document.getElementById("up_category_menu");
     var selectValue = selectBox.options[selectBox.selectedIndex].value;
@@ -15,7 +14,6 @@ function changeMajorSelect(){
     var major1 = "major1"
     var major2 = "major2"
     var major3 = "major3"
-
     if (selectValue == all){
         var url = '{% url 'book:index' %}';
         window.location.href = url;
@@ -38,7 +36,6 @@ function show_box(){
     document.getElementById('state_detail2').style.display='block';
     document.getElementById('fade').style.display='block';
 }
-
 function close_box(){
     document.getElementById('state_detail2').style.display='none';
     document.getElementById('fade').style.display='none';
@@ -46,29 +43,35 @@ function close_box(){
 </script>
 
 <div class="container">
+    <div class="wrapper">
+        <form method="post">
+            <select id="up_category_menu" name="up_category_menu" onchange="changeMajorSelect()">
+                <option value="all" > 전체 </option>
+                <option value="major1"  > {{user.first_major}} </option>
+                {% if user.second_major != "" %}
+                    <option value="major2"> {{user.second_major}} </option>
+                {% endif %}
+                {% if user.third_major != "" %}
+                    <option value="major3" selected> {{user.third_major}} </option>
+                {% endif %}
+            </select>
+            <hr id="line_major_bar">
+        </form>
+        <button type="button" id="btn_create" onclick="location.href='{% url 'book:create' %}'" >전공책 등록하기</button>
+    </div>
 
-    <form action="{% url 'book:search' %}" method="post"> {% csrf_token %}
-        <input class="search_input" type="search" placeholder="     도서 검색 (수업, 책제목, 저자 등)" name="q" value="{{q}}">
-        <button type="submit" class="btn_search" > <img src="{% static 'img/search_btn.png' %}" alt="" height="45" width="43"> </button>
-    </form>
-    <button type="button" id="btn_create" onclick="location.href='{% url 'book:create' %}'" >전공책 등록하기</button>
-    <form method="post">
-    <select id="up_category_menu" name="up_category_menu" onchange="changeMajorSelect()">
-        <option value="all" > 전체 </option>
-        <option value="major1"  > {{user.first_major}} </option>
-        {% if user.second_major != "" %}
-            <option value="major2"> {{user.second_major}} </option>
-        {% endif %}
-        {% if user.third_major != "" %}
-            <option value="major3" selected> {{user.third_major}} </option>
-        {% endif %}
-    </select>
-    </form>
-    <hr id="line_major_bar">
+    <div class="wrapper">
+        <form action="{% url 'book:search' %}" method="post" id="search_form"> {% csrf_token %}
+            <input class="search_input" type="search" placeholder="     도서 검색 (수업, 책제목, 저자 등)" name="q" value="{{q}}">
+            <button type="submit" class="btn_search" > <img src="{% static 'img/search_btn.png' %}" alt="" height="45" width="43"> </button>
+        </form>
+    </div>
 
+    <div class="wrapper filter">
     <form action="{% url 'book:major3' %}" method="get" id="filter-form">
-        <div class="filtering-box"> <span class="filter-txt"> 필터링 </span>
-            <div class="filter-checkbox">
+        <div class="filtering-box">
+            <div class="all_filter_contents">
+            <span class="filter-txt"> 필터링 </span>
             {% if "free" in search_type %}
             <span class="free_filter">
                 <input class="form-check-input" type="checkbox" checked value="free" name="search-type" onchange="changeFilter()" id="free1">
@@ -94,66 +97,68 @@ function close_box(){
             </span>
             {% endif %}
             <button id="hidden-form-submit" type="submit" hidden>제출</button>
-            </div>
+        </div>
         </div>
     </form>
+    </div>
 
     {% if object_list %}
-    <table id="book_table">
-        <thead>
-            <th>사진</th>
-            <th>제목(저자)</th>
-            <th>학과+수업</th>
-            <th>
-                상태
-                <button class="btn_stated" onclick="show_box()"> <img src="{% static 'img/state_standard.png' %}" alt="" height="19" width="19"> </button>
-                <div class="state_box">
-                  <div id="state_detail2" class="list_state_content">
-                      <span style="font-weight: bold; font-size: 14px;"> BooKU 도서 상태 기준 안내</span><button class="btn_closed_state" onclick="close_box()"><img src="{% static 'img/state_standard.png' %}" alt="" height="19" width="19"></button>
-                      <div class="state_box_text2" align="left" style="padding-left: -10px;" >
-                          <span style="font-weight: bold;"> 최상:</span> 새것과 같은 상태 <br>
-                          <span style="font-weight: bold;"> 상:</span> 약간의 필기감 <br>
-                          <span style="font-weight: bold;"> 보통:</span> 헌 부분 있음, 필기감, 사용감 있음 <br>
-                          <span style="font-weight: bold;"> 하:</span> 찢김, 심한 낙서, 페이지 유실
+        <table id="book_table">
+            <thead>
+                <th>사진</th>
+                <th>제목(저자)</th>
+                <th>학과+수업</th>
+                <th>
+                    상태
+                    <button class="btn_stated" onclick="show_box()"> <img src="{% static 'img/state_standard.png' %}" alt="" height="19" width="19"> </button>
+                    <div class="state_box">
+                      <div id="state_detail2" class="list_state_content">
+                          <span style="font-weight: bold; font-size: 14px;"> BooKU 도서 상태 기준 안내</span><button class="btn_closed_state" onclick="close_box()"><img src="{% static 'img/state_standard.png' %}" alt="" height="19" width="19"></button>
+                          <div class="state_box_text2" align="left">
+                              <span style="font-weight: bold;"> 최상:</span> 새것과 같은 상태 <br>
+                              <span style="font-weight: bold;"> 상:</span> 약간의 필기감 <br>
+                              <span style="font-weight: bold;"> 보통:</span> 헌 부분 있음, 필기감, 사용감 있음 <br>
+                              <span style="font-weight: bold;"> 하:</span> 찢김, 심한 낙서, 페이지 유실
+                          </div>
                       </div>
-                  </div>
-                </div>
-            </th>
-            <th>가격</th>
-            <th>거래가능</th>
-        </thead>
-        <tbody>
-                {% for object in object_list %}
-                    <tr class="tabel_row" onclick="location.href='{% url 'book:detail' object.id %}'">
-                        <td><a href="{% url 'book:detail' object.id %}">
-                            {% if object.image.url != "" %}
-                                <img src=" {{ object.image.url }}" class="book_list_img" alt="..." height="94px" width="99px">
-                            {% endif %}
-                            </a>
-                        </td>
-                        <td><div style="font-size: 22px;">{{ object.title|truncatechars:30 }}</div> <br> <div style="font-weight: normal;"> 저자: {{ object.writer }}</div> </td>
-                        <td> <div style="font-weight: normal;">{{ object.major_category }}</div> <br> <div style="font-size: 21px;"> {{ object.lecture }}</div> </td>
-                        <td> {{ object.state }}  </td>
-                        <td>
-                            {% if object.price == 0 %}
-                                무료나눔
-                            {% else %}
-                                {{ object.price }}₩
-                            {% endif %}
-                        </td>
-                        <td>
-                            {% if object.deal_flag == 1 %} 거래중 {% endif %}
-                            <div style="color:#ADADAD;">{% if object.deal_flag == 0 %} 거래완료 {% endif %}</div>
+                    </div>
+                </th>
 
-                        </td>
-                    </tr>
-                {% endfor %}
-        </tbody>
-    </table>
+                <th>가격</th>
+                <th>거래가능</th>
+            </thead>
+
+            <tbody>
+                    {% for object in object_list %}
+                        <tr class="tabel_row" onclick="location.href='{% url 'book:detail' object.id %}'">
+                            <td><a href="{% url 'book:detail' object.id %}">
+                                {% if object.image.url != "" %}
+                                    <img src=" {{ object.image.url }}" class="book_list_img" alt="..." height="94px" width="99px">
+                                {% endif %}
+                                </a>
+                            </td>
+                            <td><div style="font-size: 22px;">{{ object.title|truncatechars:30 }}</div> <br> <div style="font-weight: normal;"> 저자: {{ object.writer }}</div> </td>
+                            <td> <div style="font-weight: normal;">{{ object.major_category }}</div> <br> <div style="font-size: 21px;"> {{ object.lecture }}</div> </td>
+                            <td> {{ object.state }}  </td>
+                            <td>
+                                {% if object.price == 0 %}
+                                    무료나눔
+                                {% else %}
+                                    {{ object.price }}₩
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if object.deal_flag == 1 %} 거래중 {% endif %}
+                                <div style="color:#ADADAD;">{% if object.deal_flag == 0 %} 거래완료 {% endif %}</div>
+
+                            </td>
+                        </tr>
+                    {% endfor %}
+            </tbody>
+        </table>
     {% else %}
-        <div class="no_search"> 작성된 글이 없습니다 </div>
+    <div class="no_search"> 작성된 글이 없습니다</div>
     {% endif %}
 </div>
 
-{% endif %}
 {% endblock %}
